Add availabilities to the newsletter page.

--- a/_layouts/newsletter.html
+++ b/_layouts/newsletter.html
@@ -125,8 +125,8 @@
         <td>
           <table border="0" cellpadding="0" cellspacing="0" width="900px" class="table highlights__table">
             <tr>
-              <td width="50px"></td>
-              <td width="800px" class="padding-bottom">
+              <td width="75px"></td>
+              <td style="vertical-align: top" width="365px" class="padding-bottom">
                 <span class="list-header">HIGHLIGHTS</span>
                 <ul class="newsletter-highlights">
                   {% for highlight in page.highlights %}
@@ -134,11 +134,8 @@
                   {% endfor %}
                 </ul>
               </td>
-              <td width="50px"></td>
-            </tr>
-            <tr>
-              <td width="50px"></td>
-              <td width="800px">
+              <td width="20px"></td>
+              <td style="vertical-align: top" width="365px">
                 <span class="list-header">AMENITIES</span>
                 <ul class="newsletter-highlights">
                   {% for amenity in page.amenities %}
@@ -146,8 +143,21 @@
                   {% endfor %}
                 </ul>
               </td>
-              <td width="50px"></td>
+              <td width="75px"></td>
             </tr>
+            {% if page.availabilities.size > 0 %}
+              <tr>
+                <td width="75px"></td>
+                <td style="vertical-align: top" width="365px">
+                  <span class="list-header">AVAILABILITIES</span>
+                  <ul class="newsletter-highlights">
+                    {% for unit in page.availabilities %}
+                    <li>{{ unit }}</li>
+                    {% endfor %}
+                  </ul>
+                </td>
+              </tr>
+            {% endif %}
           </table>
         </td>
       </tr>
