Encase the bio button in a surrounding block level element, so that we can ensure that it will never wrap with the text below.

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -58,7 +58,11 @@
                     {{agent.short_bio}}
                   </div>
                   <div class="agent-info-bottom">
-                    <div class="bio-button" data-agent="{{forloop.index}}">VIEW FULL BIO</div>
+                    <div>
+                      <div class="bio-button" data-agent="{{forloop.index}}">
+                        VIEW FULL BIO
+                      </div>
+                    </div>
                     <div class="bio-contact">
                       {% if agent.email.size > 0 %}
                         <span class="black">
